dnl $Id$

AC_INIT()
AC_CANONICAL_SYSTEM
AM_CONFIG_HEADER(h/config.h)
AM_INIT_AUTOMAKE(brlcad, 6.0)

dnl options
dnl tcl prefix
dnl itcl prefix
dnl tk prefix

dnl progs
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_LIBTOOL
dnl AM_PROG_LEX
dnl AC_PROG_YACC

AM_C_PROTOTYPES

case "$target" in
	*-*-linux*)
		PTHREAD_LIBS="-lpthread"
		;;
	*-*-*BSD*)
		PTHREAD_LIBS="-pthread"
		;;
esac
PTHREAD_CFLAGS=
AC_SUBST(PTHREAD_CFLAGS)
AC_SUBST(PTHREAD_LIBS)

AC_DEFINE(EXTERN_STDOUT,,[Stdout is extern])

dnl libs
dnl X
X_LIBS="-L/usr/X11R6/lib -lX11 -lXi"
AC_SUBST(X_LIBS)

dnl tcl
dnl try to find a system tcl, otherwise build it?
dnl case "$target" in
dnl 	*-*-*bsd*)
dnl 		TCL_LIBS="-L/usr/local/lib -ltcl84"
dnl 		;;
dnl 	*)
dnl 		TCL_LIBS="-ltcl8.4"
dnl 		;;
dnl esac
TCL_LIBS='${top_builddir}'"/libtcl8.4/libtcl.la -ldl -lm"
TCL=libtcl8.4
AC_SUBST(TCL)
AC_SUBST(TCL_LIBS)

TCL_LIBRARY="$prefix/tcl8.4"
AC_SUBST(TCL_LIBRARY)
if test "$FRAMEWORK_BUILD" = "1" ; then
	dnl this may be wrong
    TCL_BUILD_CFLAGS="-DTCL_PACKAGE_PATH=\\\"$libdir/Resources/Scripts\\\" -DTCL_LIBRARY=\\\"$TCL_LIBRARY\\\""
else
    TCL_BUILD_CFLAGS="-DTCL_PACKAGE_PATH=\\\"$libdir\\\" -DTCL_LIBRARY=\\\"$TCL_LIBRARY\\\""
fi
echo "TCL_BUILD_CFLAGS = $TCL_BUILD_CFLAGS"
AC_SUBST(TCL_BUILD_CFLAGS)


ITCL_LIBS="${prefix}/libitcl8.4/itcl/libitcl.la"
AC_SUBST(ITCL_LIBS)

dnl tk
TK_LIBS='${top_builddir}'"/libtk8.4/libtk.la"
TK=
TK_LIBRARY="$prefix/tk8.4"
AC_SUBST(TK)
AC_SUBST(TK_LIBS)
AC_SUBST(TK_LIBRARY)

ITK_LIBS="${prefix}/libitcl8.4/itk/libitk.la"
AC_SUBST(ITK_LIBS)

PNG_LIBS="-lpng -lz"
AC_SUBST(PNG_LIBS)

dnl headers
AC_HEADER_STDC
AC_CHECK_HEADERS(config.hfloat.h getopt.h limits.h memory.h stdarg.h stdlib.h string.h sys/ioctl_compat.h sys/machd.h sys/mman.h sys/select.h sys/socket.h sys/time.h termcap.h termios.h time.h unistd.h varargs.h xosdefs.h limits.h)
AC_DEFINE(TIME_WITH_SYS_TIME,1,sys/time.h)

X_CFLAGS="-I/usr/X11R6/include"
AC_SUBST(X_CFLAGS)
AC_DEFINE(DM_X,,[Display for X])

GL_CFLAGS="-DUSE_MESA_GL"
AC_SUBST(GL_CFLAGS)

LEX_CFLAGS="-Dyylex=cmd_nop"
AC_SUBST(LEX_CFLAGS)

TCL_CFLAGS=
ITCL_CFLAGS=
TK_CFLAGS=
ITK_CFLAGS=
AC_SUBST(TCL_CFLAGS)
AC_SUBST(ITCL_CFLAGS)
AC_SUBST(TK_CFLAGS)
AC_SUBST(ITK_CFLAGS)

dnl ===
AC_DEFINE(HAVE_TM_ZONE,,string in time zone)

dnl typedefs
dnl functions
AC_CHECK_FUNCS(drand gethostname vprintf sbrk vfork dlopen bzero strdup strchr getopt writev regex)
AC_CHECK_FUNC(fstatfs, , [AC_DEFINE(NO_FSTATFS,,Lacking fstatfs)])

dnl POSIX_REGEXEC
dnl CALTECH_MALLOC
dnl DRAND
dnl DLOPEN
dnl GETHOSTNAME
dnl SHELL_ESCAPE
dnl VPRINTF
dnl SBRK
dnl VFORK
dnl SBRK_DECL
dnl POPEN_DECL
dnl STRDUP_DECL
dnl GETOPT_DECL
dnl SYS_ERRLIST_DECL
dnl REGEX_DECL
dnl XOPEN
dnl UNIX_IO
dnl BZERO
dnl STRDUP
dnl STRCHR
dnl MATHERR
dnl UNIX_DOMAIN_SOCKETS
dnl FLOAT
dnl GETOPT
dnl OFF_T
dnl WRITEV
dnl REGEX
dnl BSDGETTIMEOFDAY

AC_OUTPUT([
	anim/Makefile
	brlman/Makefile
	burst/Makefile
	bwish/Makefile
	conv/Makefile
	doc/Makefile
	fbed/Makefile
	fb/Makefile
	fbserv/Makefile
	gtools/Makefile
	h/Makefile
	html/Makefile
	html/manuals/Anim_Tutorial/Makefile
	html/manuals/cadwidgets/Makefile
	html/manuals/libbu/Makefile
	html/manuals/libdm/Makefile
	html/manuals/librt/Makefile
	html/manuals/Makefile
	html/manuals/mged/animmate/Makefile
	html/manuals/mged/Makefile
	html/manuals/ReleaseNotes/Makefile
	html/manuals/shaders/Makefile
	html/ReleaseNotes/Makefile
	html/ReleaseNotes/Rel5.0/Makefile
	html/ReleaseNotes/Rel5.0/Summary/Makefile
	html/ReleaseNotes/Rel6.0/Makefile
	irprep/Makefile
	iwidgets4.0.1/Makefile
	libbn/Makefile
	libbu/Makefile
	libcursor/Makefile
	libdm/Makefile
	libfb/Makefile
	libfft/Makefile
	libitcl3.2/itcl/doc/Makefile
	libitcl3.2/itcl/generic/Makefile
	libitcl3.2/itcl/library/Makefile
	libitcl3.2/itcl/Makefile
	libitcl3.2/itcl/unix/Makefile
	libitcl3.2/itk/doc/Makefile
	libitcl3.2/itk/generic/Makefile
	libitcl3.2/itk/library/Makefile
	libitcl3.2/itk/Makefile
	libitcl3.2/itk/unix/Makefile
	libitcl3.2/Makefile
	liboptical/Makefile
	liborle/Makefile
	libpkg/Makefile
	librt/Makefile
	libsysv/Makefile
	libtcl8.4/doc/Makefile
	libtcl8.4/generic/Makefile
	libtcl8.4/library/dde/Makefile
	libtcl8.4/library/encoding/Makefile
	libtcl8.4/library/http1.0/Makefile
	libtcl8.4/library/http/Makefile
	libtcl8.4/library/Makefile
	libtcl8.4/library/msgcat/Makefile
	libtcl8.4/library/opt/Makefile
	libtcl8.4/library/reg/Makefile
	libtcl8.4/library/tcltest/Makefile
	libtcl8.4/Makefile
	libtcl8.4/unix/Makefile
	libtermio/Makefile
	libtk8.4/doc/Makefile
	libtk8.4/generic/Makefile
	libtk8.4/Makefile
	libtk8.4/unix/Makefile
	libtk8.4/library/Makefile
	libtk8.4/library/demos/Makefile
	libtk8.4/library/msgs/Makefile
	libutahrle/Makefile
	libwdb/Makefile
	Makefile
	mged/Makefile
	rt/Makefile
	sh/Makefile
	sig/Makefile
	tclscripts/geometree/Makefile
	tclscripts/lib/Makefile
	tclscripts/Makefile
	tclscripts/mged/Makefile
	tclscripts/nirt/Makefile
	tclscripts/pl-dm/Makefile
	tclscripts/rtwizard/examples/Makefile
	tclscripts/rtwizard/examples/PictureTypeA/Makefile
	tclscripts/rtwizard/examples/PictureTypeB/Makefile
	tclscripts/rtwizard/examples/PictureTypeC/Makefile
	tclscripts/rtwizard/examples/PictureTypeD/Makefile
	tclscripts/rtwizard/examples/PictureTypeE/Makefile
	tclscripts/rtwizard/examples/PictureTypeF/Makefile
	tclscripts/rtwizard/lib/Makefile
	tclscripts/rtwizard/Makefile
	tclscripts/util/Makefile
	tools/Makefile
	util/Makefile
])
