dnl $Id$

AC_INIT()
AC_CANONICAL_SYSTEM
AM_CONFIG_HEADER(h/config.h)
AM_INIT_AUTOMAKE(brlcad, 6.0)

dnl options
dnl tcl prefix
dnl itcl prefix
dnl tk prefix

dnl progs
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_LIBTOOL
AM_PROG_LEX
dnl AC_PROG_YACC

AM_C_PROTOTYPES

CFLAGS="$CFLAGS "'-I$(top_srcdir)/h'

case "$target" in
	*-*-linux*)
		PTHREAD_LIBS="-lpthread"
		;;
	*-*-*BSD*)
		PTHREAD_LIBS="-pthread"
		;;
esac
PTHREAD_CFLAGS=
AC_SUBST(PTHREAD_CFLAGS)
AC_SUBST(PTHREAD_LIBS)

AC_DEFINE(EXTERN_STDOUT,,[Stdout is extern])

dnl libs

dnl need curses, would prefer ncurses
SAVELIBS="${LIBS}"
LIBS=
AC_SEARCH_LIBS(initscr, ncurses curses,,AC_ERROR(Need curses!))
CURSES="${LIBS}"
AC_SUBST(CURSES)
LIBS="${SAVELIBS}"

SAVELIBS="${LIBS}"
LIBS=
AC_SEARCH_LIBS(getvideo, gl, AC_DEFINE(HAS_SGIGL,1,Irix GL is present.))
SGIGL="${LIBS}"
AC_SUBST(SGIGL)
LIBS="${SAVELIBS}"

AC_SEARCH_LIBS(mallopt,malloc)
AC_SEARCH_LIBS(matherr,mx)


dnl X
X_LIBS="-L/usr/X11R6/lib -lX11 -lXi"
AC_SUBST(X_LIBS)

dnl tcl
dnl try to find a system tcl, otherwise build it?
dnl case "$target" in
dnl 	*-*-*bsd*)
dnl 		TCL_LIBS="-L/usr/local/lib -ltcl84"
dnl 		;;
dnl 	*)
dnl 		TCL_LIBS="-ltcl8.4"
dnl 		;;
dnl esac
TCL_LIBS='${top_builddir}/libtcl8.4/libtcl8.4.la @DL@ -lm'
TCL=libtcl8.4
TCLVER=8.4
AC_SUBST(TCL)
AC_SUBST(TCLVER)
AC_SUBST(TCL_LIBS)

TCL_LIBRARY="$prefix/tcl8.4"
AC_SUBST(TCL_LIBRARY)
if test "$FRAMEWORK_BUILD" = "1" ; then
	dnl this may be wrong
    TCL_BUILD_CFLAGS="-DTCL_PACKAGE_PATH=\\\"$libdir/Resources/Scripts\\\" -DTCL_LIBRARY=\\\"$TCL_LIBRARY\\\""
else
    TCL_BUILD_CFLAGS="-DTCL_PACKAGE_PATH=\\\"$libdir\\\" -DTCL_LIBRARY=\\\"$TCL_LIBRARY\\\""
fi
AC_SUBST(TCL_BUILD_CFLAGS)

ITCL_LIBS='${top_builddir}/libitcl3.2/itcl/libitcl.la'
ITCL_VERSION="3.2"
AC_SUBST(ITCL_LIBS)
AC_SUBST(ITCL_VERSION)

dnl tk
TK_LIBS='${top_builddir}/libtk8.4/libtk8.4.la ${TCL_LIBS} ${X_LIBS}'
TK_LIBRARY="$prefix/tk8.4"
TKVER="8.4"
AC_SUBST(TKVER)
AC_SUBST(TK_LIBS)
AC_SUBST(TK_LIBRARY)

ITK_LIBS='${top_builddir}/libitcl3.2/itk/libitk.la'
AC_SUBST(ITK_LIBS)

PNG_LIBS='${top_builddir}/libpng/libpng.la ${top_builddir}/libz/libz.la'
AC_SUBST(PNG_LIBS)

dnl headers
AC_HEADER_STDC
AC_CHECK_HEADERS(config.hfloat.h getopt.h limits.h memory.h stdarg.h stdlib.h string.h sys/ioctl_compat.h sys/machd.h sys/mman.h sys/select.h sys/socket.h sys/time.h termcap.h termios.h time.h unistd.h varargs.h xosdefs.h limits.h)
AC_DEFINE(TIME_WITH_SYS_TIME,1,sys/time.h)
AC_STRUCT_ST_BLKSIZE

AC_CHECK_DECL(re_comp,AC_DEFINE(HAVE_REGEX_DECL,,BSD regular expressions))

dnl ============================================================
dnl union wait testing from tcl8.4's configure.in, should be revamped?
AC_MSG_CHECKING([union wait])
AC_CACHE_VAL(tcl_cv_union_wait,
    AC_TRY_LINK([#include <sys/types.h>
#include <sys/wait.h>], [
union wait x;
WIFEXITED(x);           /* Generates compiler error if WIFEXITED
                         * uses an int. */
    ], tcl_cv_union_wait=yes, tcl_cv_union_wait=no))
AC_MSG_RESULT($tcl_cv_union_wait)
if test $tcl_cv_union_wait = no; then
    AC_DEFINE(NO_UNION_WAIT,,Lacking a "union wait")
fi
dnl ============================================================

AC_CHECK_FUNCS(dlopen, DL="" ,[AC_CHECK_LIB(dl, dlopen, DL="-ldl", AC_CHECK_LIB(dld, dlopen, DL="-ldld",AC_ERROR(No dynamic loader found)))])

BN='${top_builddir}/libbn/libbn.la ${BU}'
BU='${top_builddir}/libbu/libbu.la ${TCL_LIBS} ${PTHREAD_LIBS} -lm ${DL}'
CURSOR='${top_builddir}/libcursor/libcursor.la ${CURSES}'
DM='${top_builddir}/libdm/libdm.la ${TK_LIBS} ${RT}'
FB='${top_builddir}/libfb/libfb.la ${X_LIBS} ${PKG} ${BU}'
FFT='${top_builddir}/libfft/libfft.la -lm'
OPTICAL='${top_builddir}/liboptical/liboptical.la'
ORLE='${top_builddir}/liborle/liborle.la'
PKG='${top_builddir}/libpkg/libpkg.la'
RLE='${top_builddir}/libutahrle/libutahrle.la -lm'
RT='${top_builddir}/librt/librt.la ${BN}'
SYSV='${top_builddir}/libsysv/libsysv.la'
TERMIO='${top_builddir}/libtermio/libtermio.la'
WDB='${top_builddir}/libwdb/libwdb.la'
AC_SUBST(BN)
AC_SUBST(BU)
AC_SUBST(CURSOR)
AC_SUBST(DL)
AC_SUBST(DM)
AC_SUBST(FB)
AC_SUBST(FFT)
AC_SUBST(OPTICAL)
AC_SUBST(ORLE)
AC_SUBST(PKG)
AC_SUBST(RLE)
AC_SUBST(RT)
AC_SUBST(SYSV)
AC_SUBST(TERMIO)
AC_SUBST(WDB)

X_CFLAGS="-I/usr/X11R6/include"
AC_SUBST(X_CFLAGS)
AC_DEFINE(DM_X,,[Display for X])

GL_CFLAGS="-DUSE_MESA_GL"
AC_SUBST(GL_CFLAGS)

LEX_CFLAGS="-Dyylex=cmd_nop"
AC_SUBST(LEX_CFLAGS)

TCL_CFLAGS=
ITCL_CFLAGS=
TK_CFLAGS=
ITK_CFLAGS=
AC_SUBST(TCL_CFLAGS)
AC_SUBST(ITCL_CFLAGS)
AC_SUBST(TK_CFLAGS)
AC_SUBST(ITK_CFLAGS)

dnl ===
AC_DEFINE(HAVE_TM_ZONE,,string in time zone)

dnl typedefs
dnl functions
AC_CHECK_FUNCS(drand gethostname vprintf sbrk vfork dlopen bzero strdup strchr getopt writev regex)
AC_CHECK_FUNC(fstatfs, , [AC_DEFINE(NO_FSTATFS,,Lacking fstatfs)])

dnl POSIX_REGEXEC
dnl CALTECH_MALLOC
dnl DRAND
dnl DLOPEN
dnl GETHOSTNAME
dnl SHELL_ESCAPE
dnl VPRINTF
dnl SBRK
dnl VFORK
dnl SBRK_DECL
dnl POPEN_DECL
dnl STRDUP_DECL
dnl GETOPT_DECL
dnl SYS_ERRLIST_DECL
dnl REGEX_DECL
dnl XOPEN
dnl UNIX_IO
dnl BZERO
dnl STRDUP
dnl STRCHR
dnl MATHERR
dnl UNIX_DOMAIN_SOCKETS
dnl FLOAT
dnl GETOPT
dnl OFF_T
dnl WRITEV
dnl REGEX
dnl BSDGETTIMEOFDAY

AC_OUTPUT([
	Makefile
	anim/Makefile
	awf/Makefile
	bench/Makefile
	brlman/Makefile
	burst/Makefile
	bwish/Makefile
	comgeom-g/Makefile
	conv/Makefile
	doc/Makefile
	fb/Makefile
	fbed/Makefile
	fbserv/Makefile
	gtools/Makefile
	h/Makefile
	halftone/Makefile
	html/Makefile
	html/ReleaseNotes/Makefile
	html/ReleaseNotes/Rel5.0/Makefile
	html/ReleaseNotes/Rel5.0/Summary/Makefile
	html/ReleaseNotes/Rel6.0/Makefile
	html/manuals/Anim_Tutorial/Makefile
	html/manuals/Makefile
	html/manuals/ReleaseNotes/Makefile
	html/manuals/cadwidgets/Makefile
	html/manuals/libbu/Makefile
	html/manuals/libdm/Makefile
	html/manuals/librt/Makefile
	html/manuals/mged/Makefile
	html/manuals/mged/animmate/Makefile
	html/manuals/shaders/Makefile
	iges/Makefile
	irprep/Makefile
	iwidgets4.0.1/Makefile
	iwidgets4.0.1/doc/Makefile
	iwidgets4.0.1/generic/Makefile
	iwidgets4.0.1/iwidgets.tcl
	iwidgets4.0.1/pkgIndex.tcl
	jack/Makefile
	jove/Makefile
	lgt/Makefile
	libbn/Makefile
	libbu/Makefile
	libcursor/Makefile
	libdm/Makefile
	libfb/Makefile
	libfft/Makefile
	libitcl3.2/Makefile
	libitcl3.2/itcl/Makefile
	libitcl3.2/itcl/doc/Makefile
	libitcl3.2/itcl/generic/Makefile
	libitcl3.2/itcl/library/Makefile
	libitcl3.2/itcl/unix/Makefile
	libitcl3.2/itk/Makefile
	libitcl3.2/itk/doc/Makefile
	libitcl3.2/itk/generic/Makefile
	libitcl3.2/itk/library/Makefile
	libitcl3.2/itk/unix/Makefile
	liboptical/Makefile
	liborle/Makefile
	libpkg/Makefile
	libpng/Makefile
	librt/Makefile
	libsysv/Makefile
	libtcl8.4/Makefile
	libtcl8.4/doc/Makefile
	libtcl8.4/generic/Makefile
	libtcl8.4/library/Makefile
	libtcl8.4/library/dde/Makefile
	libtcl8.4/library/encoding/Makefile
	libtcl8.4/library/http/Makefile
	libtcl8.4/library/http1.0/Makefile
	libtcl8.4/library/msgcat/Makefile
	libtcl8.4/library/opt/Makefile
	libtcl8.4/library/reg/Makefile
	libtcl8.4/library/tcltest/Makefile
	libtcl8.4/unix/Makefile
	libtcl8.4/unix/tclConfig.sh
	libtermio/Makefile
	libtk8.4/Makefile
	libtk8.4/bitmaps/Makefile
	libtk8.4/doc/Makefile
	libtk8.4/generic/Makefile
	libtk8.4/library/Makefile
	libtk8.4/library/pkgIndex.tcl
	libtk8.4/library/demos/Makefile
	libtk8.4/library/demos/images/Makefile
	libtk8.4/library/images/Makefile
	libtk8.4/library/msgs/Makefile
	libtk8.4/unix/Makefile
	libtk8.4/unix/tkConfig.sh
	libtk8.4/xlib/Makefile
	libutahrle/Makefile
	libwdb/Makefile
	libz/Makefile
	mged/Makefile
	mk/Makefile
	nirt/Makefile
	off/Makefile
	patch/Makefile
	pro-engineer/Makefile
	pro-engineer/resource/Makefile
	pro-engineer/sgi_mips4/Makefile
	pro-engineer/sgi_mips4/mk
	pro-engineer/text/Makefile
	remrt/Makefile
	rt/Makefile
	sample_applications/Makefile
	sample_applications/mk
	sh/Makefile
	sig/Makefile
	tab/Makefile
	tclscripts/Makefile
	tclscripts/geometree/Makefile
	tclscripts/lib/Makefile
	tclscripts/mged/Makefile
	tclscripts/nirt/Makefile
	tclscripts/pl-dm/Makefile
	tclscripts/rtwizard/Makefile
	tclscripts/rtwizard/examples/Makefile
	tclscripts/rtwizard/examples/PictureTypeA/Makefile
	tclscripts/rtwizard/examples/PictureTypeB/Makefile
	tclscripts/rtwizard/examples/PictureTypeC/Makefile
	tclscripts/rtwizard/examples/PictureTypeD/Makefile
	tclscripts/rtwizard/examples/PictureTypeE/Makefile
	tclscripts/rtwizard/examples/PictureTypeF/Makefile
	tclscripts/rtwizard/lib/Makefile
	tclscripts/util/Makefile
	tools/Makefile
	unigraphics/Makefile
	util/Makefile
	vas4/Makefile
	vdeck/Makefile
	vfont/Makefile
	brlcad.spec
])
